--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -23,7 +23,11 @@
 </head>
 
 <body ng-app="FullstackGeneratedApp">
+  <div id="wrap">
+    <navbar></navbar>
     <div id="map"></div>
+  </div>
+
 
     <!-- GOOGLE SRC  -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuPZ9vV76biNnQaD1sMsjPxoHssKo2iHc&callback=initMap"></script>
