--- a/browser/scss/map/main.scss
+++ b/browser/scss/map/main.scss
@@ -23,3 +23,11 @@ html {
     padding-left: 10px;
 }
 
+.angular-google-map-container {
+    height: 400px;
+}
+
+.angular-google-map {
+    height: 400px;
+}
+
